--- a/data/meson.build
+++ b/data/meson.build
@@ -10,6 +10,12 @@ install_data(
     rename: meson.project_name() + '.metainfo.xml'
 )
 
+install_data(
+    'gschema.xml',
+    install_dir: get_option('datadir') / 'glib-2.0' / 'schemas',
+    rename: meson.project_name() + '.gschema.xml'
+)
+
 icon_sizes = ['16', '24', '32', '48', '64', '128']
 foreach i : icon_sizes
     install_data(
