--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,9 @@
 project('io.github.danirabbit.voiceshark', 'vala', 'c')
 
+add_global_arguments('-DGETTEXT_PACKAGE="' + meson.project_name() + '"', language:'c')
+
 gnome = import('gnome')
+i18n = import('i18n')
 
 granite_dep = dependency('granite-7')
 gtk_dep = dependency('gtk4')
@@ -19,3 +22,4 @@ executable(
 gnome.post_install(glib_compile_schemas: true)
 
 subdir('data')
+subdir('po')
