--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Update Translation Files
       uses: elementary/actions/gettext-flatpak@main
       with:
-        manifest-path: 'voiceshark.yml'
+        manifest-path: 'io.github.danirabbit.voiceshark.yml'
       env:
         GIT_USER_NAME: "elementaryBot"
         GIT_USER_EMAIL: "builds@elementary.io"
