Run in the background

--- a/data/voiceshark.desktop.in
+++ b/data/voiceshark.desktop.in
@@ -9,3 +9,5 @@ Categories=Education;
 Icon=io.github.danirabbit.voiceshark
 Exec=io.github.danirabbit.voiceshark
 Terminal=false
+
+X-GNOME-UsesNotifications=true
