--- a/io.github.danirabbit.voiceshark.yml
+++ b/io.github.danirabbit.voiceshark.yml
@@ -13,6 +13,17 @@ finish-args:
   - '--socket=wayland'
 
 modules:
+  - name: libportal
+    buildsystem: meson
+    config-opts:
+      - "-Dbackends=['gtk4']"
+      - '-Ddocs=false'
+      - '-Dtests=false'
+    sources:
+      - type: git
+        url: https://github.com/flatpak/libportal.git
+        tag: '0.6'
+
   - name: voiceshark
     buildsystem: meson
     sources:
