--- a/meson.build
+++ b/meson.build
@@ -8,10 +8,15 @@ i18n = import('i18n')
 granite_dep = dependency('granite-7')
 gtk_dep = dependency('gtk4')
 
+subdir('data')
+
 executable(
     meson.project_name(),
+    gresource,
     'src' / 'Application.vala',
+    'src' / 'FinishPage.vala',
     'src' / 'MainWindow.vala',
+    'src' / 'StartPage.vala',
     dependencies: [
         granite_dep,
         gtk_dep
@@ -21,5 +26,4 @@ executable(
 
 gnome.post_install(glib_compile_schemas: true)
 
-subdir('data')
 subdir('po')
